--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11",
+    "firebase": "^5.0.4",
+    "vue": "^2.5.16",
     "vue-router": "^3.0.1",
+    "vuefire": "^1.4.5",
     "vuetify": "^1.0.18"
   },
   "browserslist": [
