--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue-firestore": "^0.2.8",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.5",
-    "vuetify": "^1.0.18"
+    "vuetify": "^1.0.18",
+    "vuex": "^3.0.1"
   },
   "browserslist": [
     "> 1%",
