--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mcia",
-  "description": "Microsomes based social media platform",
-  "version": "1.0.0",
+  "description": "Social station is an open source modular social media platform",
+  "version": "1.1.0",
   "author": "Microsomes Director- Tayyab Javed (Muhammed)",
   "license": "MIT",
   "private": true,
@@ -14,6 +14,7 @@
     "vue": "^2.5.16",
     "vue-firestore": "^0.2.8",
     "vue-router": "^3.0.1",
+    "vue-typer": "^1.2.0",
     "vuefire": "^1.4.5",
     "vuetify": "^1.0.18",
     "vuex": "^3.0.1"
