--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "firebase": "^5.0.4",
     "vue": "^2.5.16",
     "vue-firestore": "^0.2.8",
+    "vue-radial-progress": "^0.2.10",
     "vue-router": "^3.0.1",
     "vue-typer": "^1.2.0",
+    "vue2-circle-progress": "^1.2.3",
     "vuefire": "^1.4.5",
     "vuetify": "^1.0.18",
     "vuex": "^3.0.1"
