--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.0.0-rc.11",
     "express": "^4.16.3",
     "firebase": "^5.0.4",
     "vue": "^2.5.16",
