--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "firebase": "^5.0.4",
     "vue": "^2.5.16",
+    "vue-disqus": "^3.0.3",
     "vue-firestore": "^0.2.8",
     "vue-radial-progress": "^0.2.10",
     "vue-router": "^3.0.1",
