--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
+    "buefy": "^0.6.6",
     "express": "^4.16.3",
     "firebase": "^5.0.4",
     "vue": "^2.5.16",
