--- a/_0 node server/package.json
+++ b/_0 node server/package.json
@@ -6,7 +6,9 @@
   "version": "",
   "dependencies": {
     "express": "^4.16.3",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "mysql": "^2.15.0",
+    "newsapi": "^2.2.2"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
