--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "buefy": "^0.6.6",
     "express": "^4.16.3",
     "firebase": "^5.0.4",
+    "slugify": "^1.3.0",
     "vue": "^2.5.16",
     "vue-disqus": "^3.0.3",
     "vue-firestore": "^0.2.8",
