--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
     "buefy": "^0.6.6",
+    "element-ui": "^2.4.1",
     "express": "^4.16.3",
     "firebase": "^5.0.4",
+    "fish-ui": "^1.1.15",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
     "slugify": "^1.3.0",
     "vue": "^2.5.16",
     "vue-disqus": "^3.0.3",
