--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
     "buefy": "^0.6.6",
+    "dplayer": "^1.23.0",
     "element-ui": "^2.4.1",
     "express": "^4.16.3",
     "firebase": "^5.0.4",
@@ -21,6 +22,7 @@
     "slugify": "^1.3.0",
     "vue": "^2.5.16",
     "vue-disqus": "^3.0.3",
+    "vue-dplayer": "0.0.10",
     "vue-firestore": "^0.2.8",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-moment": "^4.0.0-0",
@@ -28,6 +30,7 @@
     "vue-router": "^3.0.1",
     "vue-typer": "^1.2.0",
     "vue-typewriter": "^2.2.1",
+    "vue-video-player": "^5.0.2",
     "vue2-circle-progress": "^1.2.3",
     "vuefire": "^1.4.5",
     "vuetify": "^1.0.18",
@@ -46,6 +49,8 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "node-sass": "^4.9.2",
+    "sass-loader": "^7.0.3",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
